Bug 439535 - Edit -> Search in files window does not appear after collapsing when using shortcut
Summary: Edit -> Search in files window does not appear after collapsing when using sh...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.04.2
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
: 439528 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-07-06 01:54 UTC by jimbo
Modified: 2021-07-11 11:14 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jimbo 2021-07-06 01:54:45 UTC
SUMMARY

When using the 'Edit -> Search in files' function it will appear at the bottom as a tray without an 'x' button. Not a big deal, except that you can't use 'Esc' to exit out of it, which would match the behaviour of the 'find' function. But you can drag it and collapse the window.

However the real issue is when you use 'search in files' shortcut when you have previously collapsed the window. Now your text caret is actually in the 'Find' input field but as you type it's completely hidden in the collapsed window.


STEPS TO REPRODUCE
1. Edit -> Search in files
2. Drag the window to collapse 'Search in files'
3. Use the [Ctrl+Alt+F] to open 'Search in files'
4. Start typing.

OBSERVED RESULT
The caret disappears into the hidden Search in files window

EXPECTED RESULT
Search in files opens instead of remaining hidden

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.22.2
KDE Frameworks Version: 5.83.0
Qt Version: 5.15.3

ADDITIONAL INFORMATION
It would be nice to use the 'Esc' key to exit out of this function and to include an 'x' button (on the right) to be consistent.
Comment 1 Bug Janitor Service 2021-07-07 19:08:49 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/451
Comment 2 Christoph Cullmann 2021-07-07 19:16:04 UTC
*** Bug 439528 has been marked as a duplicate of this bug. ***
Comment 3 Jan Paul Batrina 2021-07-11 11:13:58 UTC
Git commit 927a199121d765d75853be2ed415f95c8a363963 by Jan Paul Batrina, on behalf of Christoph Cullmann.
Committed on 11/07/2021 at 04:08.
Pushed by cullmann into branch 'master'.

avoid that tool view split view collapse

if people want to hide the toolview,
there is the button or shortcut

this avoids that collapsing via dragging leads
to confusion

M  +6    -2    kate/katemdi.cpp

https://invent.kde.org/utilities/kate/commit/927a199121d765d75853be2ed415f95c8a363963
Comment 4 Jan Paul Batrina 2021-07-11 11:14:07 UTC
Git commit 378c65d5cd5c81e75c18cac3da75d08c52280d35 by Jan Paul Batrina.
Committed on 11/07/2021 at 04:08.
Pushed by cullmann into branch 'master'.

Expand tool view sidebars when they are collapsed

This ensures that the tool view can be restored
not just through moving the splitter via mouse,
but also by showing/hiding tool views.

This enables a user to temporarily hide
multiple (persistent) tool views on one sidebar
without having to hide each individual toolview.

This reverts commit fba7677a87f81b87c287e9f3cc66eab57f76b6f5.

M  +47   -6    kate/katemdi.cpp
M  +3    -0    kate/katemdi.h

https://invent.kde.org/utilities/kate/commit/378c65d5cd5c81e75c18cac3da75d08c52280d35