avoid that tool view split view collapse

if people want to hide the toolview,
there is the button or shortcut

this avoids that collapsing via dragging leads
to confusion

BUG: 439535